Update kafka.manager.md